* Added possibility to hide check/radio box for unchecked tk::MenuItem objects.
* Added SLOT_BEGIN_EDIT and SLOT_END_EDIT slot events.
* Fixed improper value calculation in cycling knob when clicking on the knob's scale.
* Added support of SLOT_BEGIN_EDIT and SLOT_END_EDIT by tk::Knob, tk::Fader,
  tk::ScrollBar, tk::GraphDot and tk::GraphMarker widgets.
* Updated dependencies file.

=== 1.0.7 ===
* Added possibility to enable/disable Knob's scale actions.

=== 1.0.6 ===
* Added stretch and loop markers to the AudioChannel and AudioSample widgets.
* Added tk::Tab and tk::TabControl widgets.
* Additional functions to work with coordinates provided in the tk::Graph: xy_to_axis, axis_to_xy.
* Improved widget tk::Grid space allocation algorithm that eliminates rows/columns which contain
  widgets that share space across other rows/columns. 
* Added support of cusom file preview embedding into tk::FileDialog widget.
* Fixed problems with scrolling of the tk::ListBox.
* Fixed operations on undefined values in tk::CheckBox and tk::RadioButton.
* Updated build scripts.

=== 1.0.5 ===
* Updated build scripts.

=== 1.0.4 ===
* Added support of Windows operating system.
* Added support of modern C++ 11 standard and above.
* Updated build scripts.
* Added more formats for URLSink (Windows support).
* Fixed bug in ListBox widget that could result in memory corruption.
* Migrated from popup window arrangement paradigm to the tether paradigm.
* Added volume listing to the tk::FileDialog.
* Added element hovering for ListBox widget and derived ComboBox and ComboGroup widgets.

=== 1.0.3 ===
* Added Window::has_parent() method to check that window is embedded into another window.
* Added Display::enum_monitors() method to query current state of connected monitors.
* Added xrandr library dependency for the X.11-compatible systems.
* Updated window appearance algorithm.
* Added ipadding() property to the tk::Label widget.
* Updated build scripts.

=== 1.0.2 ===