@@ -9,6 +9,7 @@
 * Fixed improper value calculation in cycling knob when clicking on the knob's scale.
 * Added support of SLOT_BEGIN_EDIT and SLOT_END_EDIT by tk::Knob, tk::Fader,
   tk::ScrollBar, tk::GraphDot and tk::GraphMarker widgets.
+* Added support of named widget groups.
 * Updated dependencies file.
 
 === 1.0.7 ===
